k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estate-service
spec:
  type: ClusterIP
  selector:
    app: estate
  ports:
      - port: 80
        targetPort: 8000
